--- a/homeaway/templates/base.html
+++ b/homeaway/templates/base.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="icon" type="image/png" href="{%static 'pageimages/fav.png'%}">
+<!--<link rel="icon" type="image/png" href="{%static 'pageimages/fav.png'%}">-->
 <title>ebuddy</title>
 
 <link rel="stylesheet" type="text/css" href="{%static 'css/slick.min.css'%}" />
