--- a/homeaway/templates/base.html
+++ b/homeaway/templates/base.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
 <meta name="author" content="">
-<!--<link rel="icon" type="image/png" href="{%static 'pageimages/fav.png'%}">-->
+
 <title>ebuddy</title>
 
 <link rel="stylesheet" type="text/css" href="{%static 'css/slick.min.css'%}" />
@@ -23,7 +23,7 @@
 
 <nav class="navbar navbar-expand navbar-dark bg-dark osahan-nav-top p-0 sticky-top">
 <div class="container">
-<a class="navbar-brand mr-2" href="index.html"><img src="pageimages/logo.svg" alt="">
+<a class="navbar-brand mr-2" href="index.html"><img src="" alt="">
 </a>
 <form class="d-none d-sm-inline-block form-inline mr-auto my-2 my-md-0 mw-100 navbar-search">
 <div class="input-group">
@@ -72,7 +72,7 @@ Message Center
 
 <a class="dropdown-item d-flex align-items-center" href="messages.html">
 <div class="dropdown-list-image mr-3">
-<img class="rounded-circle" src="https://askbootstrap.com/preview/Olink/light/img/p4.png" alt="">
+<img class="rounded-circle" src="" alt="">
 <div class="status-indicator bg-success"></div>
 </div>
 <div class="overflow-hidden">
