--- a/homeaway/templates/home.html
+++ b/homeaway/templates/home.html
@@ -350,37 +350,49 @@
     <div class="box-body p-3">
 
 
-      {%for people in peopleyou_know%}
+      {%for people in peopleyou_know|slice:":4"%}
 
-    <form method="post" class="follow_unfollow" action="{% url 'followunfollow'%}" id="{{user_detail.user.id}}">
 
+    <form method="post" class="follow_unfollow" action="{% url 'followunfollows'%}" id="{{people.user_id}}">
+      {%csrf_token%}
       <div class="d-flex align-items-center osahan-post-header people-list mb-2">
         <div class="dropdown-list-image mr-3">
-          <a href="{%url 'usersprofileview' people.user people.user_id%}">
-          {%if people.user.userimg.user_img%}
-          <img class="rounded-circle" src="{{people.user.userimg.user_img.url}}" alt="">
-          {%elif people.user.gender == 'Male'%}
+          <a href="{%url 'usersprofileview' people people.id%}">
+          {%if people.userimg.user_img%}
+          <img class="rounded-circle" src="{{people.userimg.user_img.url}}" alt="">
+          {%elif people.gender == 'Male'%}
           <img class="rounded-circle" src="{%static 'img-profile/maleavtr.png'%}" alt="">
-          {%elif people.user.gender == 'Female'%}
+          {%elif people.gender == 'Female'%}
           <img class="rounded-circle" src="{%static 'img-profile/img_avatar2femle.png'%}" alt="">
           {%endif%}
           <div class="status-indicator bg-success"></div>
           </a>
         </div>
         <div class="font-weight-bold mr-2">
-          <div class="text-truncate"><a href="{%url 'usersprofileview' people.user people.user_id%}">{{people.user.get_full_name}}</a></div>
-<div class="small text-gray-500"></div>
+          <div class="text-truncate"><a href="{%url 'usersprofileview' people people.id%}">{{people.get_full_name}}</a>
+
+</div>
         </div>
         <span class="ml-auto">
-           <button type="submit"  class="unstyled-button accept-btn{{flwrqst.follower_id}}" style="border: none !important;background: none; outline: none;" id="acceptbtns">
+          <button type="submit"  class="unstyled-button follow-btn" style="border: none !important;background: none; outline: none;" id="followbtns">
 
-            <i class="feather-user-plus btn-primary">follow</i>
-<!--            <i class="feather-user btn-secondary">Request Sent</i>-->
-          </button>
+
+
+
+            <span class="btn-outline-secondary" style="font-size:16px;" id="requested_btn" >follow</span>
+<!--      <span class="btn-outline-success" style="font-size:16px;" id="follow_btn" >sdffollow</span>-->
+
+
+
+ </button>
         </span>
       </div>
     </form>
+
+
       {%endfor%}
+      <hr>
+      <span style="margin-left: 5rem!important;"><a href="#">Find People</a></span>
     </div>
   </div>
   <div class="box shadow-sm border rounded bg-white mb-3">
@@ -392,7 +404,7 @@
 
       {%if reqst%}
 
-      {%for flwrqst in reqst%}
+      {%for flwrqst in reqst|slice:":4"%}
 
       <div class="d-flex align-items-center osahan-post-header people-list mb-2">
        <a href="{%url 'usersprofileview' flwrqst.follower flwrqst.follower_id%}">
@@ -408,7 +420,8 @@
           <div class="status-indicator bg-success"></div>
         </div></a>
         <div class="font-weight-bold mr-2">
-          <div class="text-truncate">{{flwrqst.follower}}</div>
+          <a href="{%url 'usersprofileview' flwrqst.follower flwrqst.follower_id%}">
+            <div class="text-truncate">{{flwrqst.follower.get_full_name}}</div></a>
 <div class="small text-gray-500"></div>
         </div>
         <span class="ml-auto">
@@ -614,9 +627,6 @@ $('.buddyrequest-form').submit(function(e) {
 
   const trim = $.trim(acceptText)
 
-  //console.log(trim)
-  //console.log(follower_id)
-
   const url = $(this).attr('action')
 
 
@@ -629,7 +639,7 @@ $('.buddyrequest-form').submit(function(e) {
       'btn_status': trim,
     },
     success: function(response) {
-      console.log(response)
+
       if (trim === 'Accept') {
         $(`.accept-btn${follower_id}`).html('<span class="btn-outline-danger" style="font-size:16px;" id="remove_btn" >UndoAccept</span>')
 
@@ -638,6 +648,61 @@ $('.buddyrequest-form').submit(function(e) {
       else {
         if (trim === 'UndoAccept') {
           $(`.accept-btn${follower_id}`).html('<span class="btn-outline-success" id="accept_btn"  style="font-size:16px">Accept</span>')
+
+
+        }
+
+      }
+
+
+    },
+    error: function(response) {
+      console.log('error', response)
+    }
+  })
+
+})
+
+
+
+
+
+
+
+
+
+$('.follow_unfollow').submit(function(e) {
+  e.preventDefault()
+
+  const user_id = $(this).attr('id')
+  const followText = $(`.follow-btn`).text()
+
+  const trim = $.trim(followText)
+
+  console.log(trim)
+  console.log(user_id)
+
+  const url = $(this).attr('action')
+
+
+  $.ajax({
+    type: 'POST',
+    url: url,
+    data: {
+      'csrfmiddlewaretoken': $('input[name=csrfmiddlewaretoken]').val(),
+      'user_id': user_id,
+      'btn_status': trim,
+    },
+    success: function(response) {
+      if (trim === 'follow') {
+        $(`.follow-btn`).html('<span class="btn-outline-secondary" style="font-size:16px;" id="requested_btn" >requested</span>')
+
+
+
+      }
+      else {
+        if (trim === 'requested') {
+          $(`.accept-btn`).html('<span class="btn-outline-success" id="follow_btn"  style="font-size:16px">follow</span>')
 
 
         }
